# mutatis-mutandis

./: .gitignore  ABSTRACT.md  ABSTRACT_concise.md  BIBLIOGRAPHY.md  README.md  SCAFFOLD.md  SEMANTIC_DIMENSIONS.md  eebo-download.js  eebo-load-csv.js  eebo-to-tei.js  eebo-to-tei.ts  eebo_notes.txt  graph.dot  ingest.sh  lib.js  method_1.md  method_2.md  my_bibliography.bib  package.json  pipeline.sh  quotes.md  run-search-service.sh  run-uml.sh  run-xml2db.sh  sources.md  supervisors.md  validate-tei.js  validate-tei.ts
python/: .flake8  Makefile.txt  README.md  _requirements.txt  eebo_conda_env.yml  finetune_macberth.py  ingest.sh  login.sh  mypy.ini  normalise.py  pipeline.sh  populate_canonical.py  pyproject.toml  pyrightconfig.json  q  requirements.txt  run.sh  setup_macberth.sh  torch_cpu.txt
python/ptototypes/: normalise.py  proto_finetune_macberth.py  ptoto_test_macberth.py
python/src/: OLD_create_fastText_ortho_norm.py  align.py  annotate_neighbors_with_roles.py  build_canonical_map.py  build_concept_timeseries.py  build_faiss_slice_indexes.py  build_role_profiles_per_slice.py  build_spelling_map.py  build_spelling_map_from_fastText.py  canonical_faiss_spelling_map.py  compute_conceptual_poles.py  compute_eg_poles.py  concept_neighbour_explorer.py  concept_neighbour_explorer_plot.py  create_fastText_ortho_canon.py  create_fastText_ortho_norm.py  diagnostics_alignment_evaluation.py  eebo_config.py  eebo_db.py  eebo_distances.py  eebo_logging.py  eebo_macberth_sentence_embedding.py  eebo_parse_dates.py  eebo_parse_tei.py  eebo_sentence_embedding.py  (+35 more)
(+144 files in other folders)
